--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <link rel="stylesheet" media="screen and (max-width: 665px)" href="./styles/block-3,4/block-3,4-small.css">
     <link rel="stylesheet" media="screen and (max-width: 990px)" href="./styles/block-3,4/block-3,4-medium.css">
     <link rel="stylesheet" media="screen and (max-width: 1260px)" href="./styles/block-3,4/block-3,4-large.css">
+    <link rel="stylesheet" media="screen and (max-width: 770px)" href="./styles/footer/footer-medium.css">
+    <link rel="stylesheet" media="screen and (max-width: 990px)" href="./styles/footer/footer-large.css">
 </head>
 
 <body>
@@ -349,15 +351,14 @@
                                     <div class="container">
                                         <p class="card1">LOREM IPSUM | MAY 2020</p>
                                         <p class="card2">Tamcorper suscipit lobortis nisl ut aliquipexea comm odo
-                                            consequat...</p>                                     
+                                            consequat...</p>
                                     </div>
                                 </div>
-                                <div class="button-container4 secondary-button primary-button block-2-button"
-                                id="">
-                                LEARN MORE
-                                <button class="image-button">
-                                </button>
-                            </div>
+                                <div class="button-container4 secondary-button primary-button block-2-button" id="">
+                                    LEARN MORE
+                                    <button class="image-button">
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -488,11 +489,53 @@
             </div>
         </section>
 
+        <!-- ----------------------------------------- footer --------------------------------------- -->
 
-
-
+        <footer id="footer">
+            <section class="container-fluid bg-grey py-5">
+                <div class="container footer-div">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="row">
+                                <div class="col-md-5 ">
+                                    <div class="logo-part">
+                                        <ul>
+                                            <li> <a href="#menu"> MENU</a> </li>
+                                            <li> <a href="#menu1"> MENU 1</a> </li>
+                                            <li> <a href="#menu2"> MENU 2</a> </li>
+                                            <li> <a href="#menu-3-4"> MENU 3</a> </li>
+                                            <li> <a href="#menu-3-4"> MENU 4</a> </li>
+                                            <li> <a href="#footer"> MENU 5</a> </li>
+                                        </ul>
+                                    </div>
+                                </div>   
+                                <div class="col-md-7 px-4 logo-part" id="social-media">
+    
+                                    <h5>CONNECT WITH US</h5>
+                                    <img src="./images/social_media.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-5" id="subscribe">
+                            <h6> Subscribe to our Newsletter</h6>
+                            <form class="form-footer my-3">
+                                <input type="text" placeholder="E-mail" name="search">
+                                <input type="button" value="SUBSCRIBE">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <div id="sub-footer">
+                <p class="sub-footerP">Copyright © dolor sit amet, consecte tuer adipiscing elit, All rights reserved. |
+                    Terms &
+                    Conditions
+                    | Fraud Alert</p>
+            </div>
+        </footer>
 
         <!-- -----------------------------------scripts----------------------------- -->
+
         <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
