--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <link rel="stylesheet" media="screen and (max-width: 1400px)" href="./styles/block-2/block-2-XL.css">
     <link rel="stylesheet" media="screen and (max-width: 665px)" href="./styles/block-3,4/block-3,4-small.css">
     <link rel="stylesheet" media="screen and (max-width: 990px)" href="./styles/block-3,4/block-3,4-medium.css">
-    <link rel="stylesheet" media="screen and (max-width: 1260px)" href="./styles/block-3,4/block-3,4-large.css">
+    <link rel="stylesheet" media="screen and (max-width: 1350px)" href="./styles/block-3,4/block-3,4-large.css">
     <link rel="stylesheet" media="screen and (max-width: 770px)" href="./styles/footer/footer-medium.css">
     <link rel="stylesheet" media="screen and (max-width: 990px)" href="./styles/footer/footer-large.css">
 </head>
@@ -102,12 +102,10 @@
                     </div>
                 </div>
             </nav>
-
             <!-- ------search area----------- -->
-
             <div class="search-area">
                 <div class="search-icon">
-                    <img id="toggleImage" class="toggle-image" src="./images/search.png" alt="search image">
+                    <div id="toggleImage" class="toggle-image"></div>
                 </div>
                 <div id="inputBox" class="hidden search">
                     <input id="speechToText" type="text" class="search__input" placeholder="Search">
@@ -202,11 +200,11 @@
                                 quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo
                                 consequat. Duis autem vel eum
                             </p>
-                            <div class="button-container2 mbutton primary-button-2 primary-button buttonM">
+                            <button class="button-container2 mbutton primary-button-2 primary-button buttonM">
                                 LEARN MORE
-                                <button class="image-button">
-                                </button>
-                            </div>
+                                <div class="image-button image-button-background">
+                                </div>
+                            </button>
                         </div>
                         <div class="col-lg-1 col-md-1"></div>
                     </div>
@@ -242,9 +240,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="button-container4 secondary-button primary-button" id="btn-1">
-                            LEARN MORE
-                            <button class="image-button">
+                        <div class="block-btn-div">
+                            <button class="button-container4 secondary-button" id="">
+                                LEARN MORE
+                                <div class="image-button">
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -261,9 +261,11 @@
                                         ullamcorper
                                     </p>
                                 </div>
-                                <div class="button-container4 secondary-button primary-button" id="M1btn">
-                                    LEARN MORE
-                                    <button class="image-button">
+                                <div class="block-btn-2">
+                                    <button class="button-container4 secondary-button" id="">
+                                        LEARN MORE
+                                        <div class="image-button">
+                                        </div>
                                     </button>
                                 </div>
                             </div>
@@ -280,9 +282,11 @@
                                         <p class="report-txt2">Ut wisi enim ad minim veniam, quis nostrud exerci
                                         </p>
                                     </div>
-                                    <div class="button-container4 secondary-button primary-button" id="M1btn">
-                                        LEARN MORE
-                                        <button class="image-button">
+                                    <div class="block-btn-2">
+                                        <button class="button-container4 secondary-button" id="">
+                                            LEARN MORE
+                                            <div class="image-button">
+                                            </div>
                                         </button>
                                     </div>
                                 </div>
@@ -339,9 +343,11 @@
                                             nonum...</p>
                                     </div>
                                 </div>
-                                <div class="button-container4 secondary-button primary-button block-2-button">
-                                    LEARN MORE
-                                    <button class="image-button">
+                                <div class="block-btn-2 block-btn-3">
+                                    <button class="button-container4 secondary-button" id="">
+                                        LEARN MORE
+                                        <div class="image-button">
+                                        </div>
                                     </button>
                                 </div>
                             </div>
@@ -354,9 +360,11 @@
                                             consequat...</p>
                                     </div>
                                 </div>
-                                <div class="button-container4 secondary-button primary-button block-2-button" id="">
-                                    LEARN MORE
-                                    <button class="image-button">
+                                <div class="block-btn-2 block-btn-3">
+                                    <button class="button-container4 secondary-button" id="">
+                                        LEARN MORE
+                                        <div class="image-button">
+                                        </div>
                                     </button>
                                 </div>
                             </div>
@@ -378,13 +386,13 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 ">
                     <div class="row" id="row-1">
-                        <div class="nested-column-container-1">
-                            <div class="nested-column " id="nested-1">
+                        <div class="event-listing-item">
+                            <div class="event-item nested-1" >
                                 <div class="calander-items">
                                     <h2 class="">MENU 3</h2>
                                 </div>
                             </div>
-                            <div class="nested-column border-btm" id="nested-1">
+                            <div class="event-item border-btm nested-1">
                                 <div class="calander-items">
                                     <div class="calander calanderEdited">
                                         <div class="calander-month">
@@ -392,12 +400,17 @@
                                         </div>
                                         18
                                     </div>
-                                    <p>Lorem ipsum dolor sit amet, consecte tur adipiscing elit, sed do eiusmod.
-                                        <br> <span class="block3Sub">13 -16 AUG 2020 | CAPE TOWN</span>
-                                    </p>
+                                    <div class="block-text-box">
+                                        <div class="block-3-subhead">
+                                            Lorem ipsum dolor sit amet, consecte tur adipiscing elit, sed do eiusmod.
+                                        </div>
+                                        <div class="block-date">
+                                            13 -16 AUG 2020 | CAPE TOWN
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="nested-column border-btm" id="nested-1">
+                            <div class="event-item border-btm nested-1" >
                                 <div class="calander-items">
                                     <div class="calander">
                                         <div class="calander-month">
@@ -405,13 +418,16 @@
                                         </div>
                                         22
                                     </div>
-                                    <p>Tristique senectus et netus et. cursus sit amet dictum sit amet justo donec
-                                        enimturpis...
-                                        <br> <span class="block3Sub">27 AUG 2020 | FRANKFURT</span>
-                                    </p>
+                                    <div class="block-text-box">
+                                        <div class="block-3-subhead">
+                                            Tristique senectus et netus et. cursus sit amet dictum sit amet justo donec
+                                            enimturpis... </div>
+                                        <div class="block-date">
+                                            27 AUG 2020 | FRANKFURT </div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="nested-column border-btm" id="nested-1">
+                            <div class="event-item border-btm nested-1" >
                                 <div class="calander-items">
                                     <div class="calander calanderEdited">
                                         <div class="calander-month">
@@ -419,9 +435,13 @@
                                         </div>
                                         14
                                     </div>
-                                    <p>A erat nam at lectus urna duis convallis convallis tellus.
-                                        <br> <span class="block3Sub">06 -14 SEP 2020 | MELBOURNE</span>
-                                    </p>
+                                    <div class="block-text-box">
+                                        <div class="block-3-subhead">
+                                            A erat nam at lectus urna duis convallis convallis tellus.
+                                        </div>
+                                        <div class="block-date">
+                                            06 -14 SEP 2020 | MELBOURNE </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="button-container3 text-center ">
@@ -435,46 +455,55 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="row" id="row-2">
-                        <div class="nested-column-container-2">
-                            <div class="nested-column menu-3-4-head" id="nested-2">
+                        <div class="event-listing-item-2">
+                            <div class="event-item menu-3-4-head nested-2" >
                                 <div class="calander-items">
                                     <h2 class="menu-3-4-head Menu4">MENU 4</h2>
                                 </div>
                             </div>
-                            <div class="nested-column border-btm2" id="nested-2">
+                            <div class="event-item border-btm2 nested-2" >
                                 <div class="calander-items">
                                     <div class="nested-img">
                                         <img src="./images/172_112_1.jpg" alt="">
                                     </div>
-                                    <p id="menu4P">Quis imperdiet massa tincidunt nunc amet nisl purus in mollis nunc
-                                        sed id
-                                        semper
-                                        risus...
-                                        <br> <span class="block3Sub">26 AUGUST 2020</span>
-                                    </p>
+                                    <div id="menu4P">
+                                        <div class="block-3-subhead">
+                                            Quis imperdiet massa tincidunt nunc amet nisl purus in mollis nunc
+                                            sed id
+                                            semper
+                                            risus... </div>
+                                        <div class="block-date block-4-date">
+                                            26 AUGUST 2020 </div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="nested-column border-btm2" id="nested-2">
+                            <div class="event-item border-btm2 nested-2" >
                                 <div class="calander-items">
                                     <div class="nested-img">
                                         <img src="./images/172_112_2.jpg" alt="">
                                     </div>
-                                    <p id="menu4P">Dignissim enim sit amet venenatis urna.
-                                        <br> <span class="block3Sub">12 AUGUST 2020</span>
-                                    </p>
+                                    <div id="menu4P">
+                                        <div class="block-3-subhead">
+                                            Dignissim enim sit amet venenatis urna.</div>
+                                        <div class="block-date block-4-date">
+                                            12 AUGUST 2020 </div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="nested-column border-btm2" id="nested-2">
+                            <div class="event-item border-btm2 nested-2" >
                                 <div class="calander-items">
                                     <div class="nested-img">
                                         <img src="./images/172_112_3.jpg" alt="">
                                     </div>
-                                    <p id="menu4P">Amet nisl purus in mollis nunc sed id semper risus. Dignissim enim
-                                        sit
-                                        amet ven...
-                                        urna.
-                                        <br> <span class="block3Sub">21 JULY 2020</span>
-                                    </p>
+                                    <div id="menu4P">
+                                        <div class="block-3-subhead">
+                                            Amet nisl purus in mollis nunc sed id semper risus. Dignissim enim
+                                            sit
+                                            amet ven...
+                                            urna. </div>
+                                        <div class="block-date block-4-date">
+                                            21 JULY 2020 </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="button-container3 text-center ">
@@ -498,21 +527,28 @@
                         <div class="col-md-7">
                             <div class="row">
                                 <div class="col-md-5 ">
-                                    <div class="logo-part">
+                                    <div class="footer-part">
                                         <ul>
-                                            <li> <a href="#menu"> MENU</a> </li>
-                                            <li> <a href="#menu1"> MENU 1</a> </li>
-                                            <li> <a href="#menu2"> MENU 2</a> </li>
-                                            <li> <a href="#menu-3-4"> MENU 3</a> </li>
-                                            <li> <a href="#menu-3-4"> MENU 4</a> </li>
+                                            <li> <a href="#block"> MENU</a> </li>
+                                            <li> <a href="#block1"> MENU 1</a> </li>
+                                            <li> <a href="#block-2"> MENU 2</a> </li>
+                                            <li> <a href="#block-3-4"> MENU 3</a> </li>
+                                            <li> <a href="#block-3-4"> MENU 4</a> </li>
                                             <li> <a href="#footer"> MENU 5</a> </li>
                                         </ul>
                                     </div>
-                                </div>   
-                                <div class="col-md-7 px-4 logo-part" id="social-media">
-    
+                                </div>
+                                <div class="col-md-7 px-4 footer-part" id="social-media">
                                     <h5>CONNECT WITH US</h5>
-                                    <img src="./images/social_media.png" alt="">
+                                    <!-- <img src="./images/social_media.png" alt=""> -->
+
+
+                                    <ul id="navlist">
+                                        <li id="twitter"><a href="https://twitter.com/home"></a></li>
+                                        <li id="facebook"><a href="https://www.facebook.com/"></a></li>
+                                        <li id="youtube"><a href="https://www.youtube.com/"></a></li>
+                                        <li id="instagram"><a href="https://www.instagram.com/"></a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -528,9 +564,10 @@
             </section>
             <div id="sub-footer">
                 <p class="sub-footerP">Copyright © dolor sit amet, consecte tuer adipiscing elit, All rights reserved. |
-                    Terms &
-                    Conditions
-                    | Fraud Alert</p>
+                    <a href="https://en.wikipedia.org/wiki/Terms_of_service">Terms &
+                        Conditions</a>
+                    <a href="https://en.wikipedia.org/wiki/List_of_types_of_fraud">| Fraud Alert</a>
+                </p>
             </div>
         </footer>
 
@@ -542,6 +579,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
+        <!-- <script src="./scripts/jquery.js"></script> -->
         <script src="./scripts/script.js"></script>
 
     </main>
