--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
             <h2 class="text-center block-title"> MENU 1</h2>
             <article class="container m1">
                 <div class="row">
-                    <div class="col-lg-1 "></div>
+                    <!-- <div class="col-lg-1"></div> -->
+
                     <div class="col-lg-6 col-md-12 first-column">
                         <!-- First Column -->
                         <div class="row lorem-page">
@@ -258,7 +259,7 @@
                             <div class="col-lg-6 col-md-12 lorem-div">
                                 <div class="lorem-caption">
                                     <div class="lorem-h1">
-                                        Lorem ipsum                                    </div>
+                                        Lorem ipsum </div>
                                     <div class="lorem-p1">
                                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                                             sed diam nonummy
@@ -281,7 +282,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-12 m1second">
+                    <div class="col-lg-5 col-md-12 m1second ">
                         <!-- Second Column -->
                         <div class="column-1">
                             <div class=" LoremImg">
@@ -316,7 +317,7 @@
                                 <div class="text-box">
                                     <div class=" lorem-text container">
                                         <div class="report-txt1">
-                                            LOREM IPSUM DOLOR                                        </div>
+                                            LOREM IPSUM DOLOR </div>
                                         <div class="report-txt2">
                                             <a href="https://www.lipsum.com/">Ut wisi enim
                                                 ad minim veniam, quis nostrud exerci
@@ -334,7 +335,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-1 "></div>
+                    <!-- <div class="col-lg-1 "></div> -->
                 </div>
             </article>
             <div class="button-container3 text-center">
@@ -357,7 +358,7 @@
                             <img src="./images/546_354.jpg" alt="" style="width:546p ;">
                             <div class="image-text">
                                 <div class="block-2-head">
-                                    LOREM IPSUM | MAR 2020                                </div>
+                                    LOREM IPSUM | MAR 2020 </div>
                                 <div>
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
@@ -381,7 +382,7 @@
                                     <img src="./images/232_150_1.jpg" class="card-img" alt="...">
                                     <div class="container">
                                         <div class="card1">
-                                            LOREM IPSUM | MAR 2020                                        </div>
+                                            LOREM IPSUM | MAR 2020 </div>
                                         <div class="card2">
                                             <a href="https://www.lipsum.com/">Lorem ipsum dolor sit amet, consecte tuer
                                                 adipiscing elit,
@@ -404,7 +405,7 @@
                                     <img src="./images/232_150_2.jpg" class="card-img" alt="...">
                                     <div class="container">
                                         <div class="card1">
-                                            LOREM IPSUM | MAY 2020                                        </div>
+                                            LOREM IPSUM | MAY 2020 </div>
                                         <div class="card2">
                                             <a href="https://www.lipsum.com/">Tamcorper suscipit lobortis nisl ut
                                                 aliquipexea comm odo
@@ -526,9 +527,7 @@
                                     <div id="menu4P">
                                         <div class="block-3-subhead">
                                             <p> Quis imperdiet massa tincidunt nunc amet nisl purus in mollis nunc
-                                                sed id
-                                                semper
-                                                risus... </p>
+                                                sed. </p>
                                         </div>
                                         <div class="block-date block-4-date">
                                             26 AUGUST 2020
@@ -560,8 +559,7 @@
                                         <div class="block-3-subhead">
                                             <p>Amet nisl purus in mollis nunc sed id semper risus. Dignissim enim
                                                 sit
-                                                amet ven...
-                                                urna.</p>
+                                                amet.</p>
                                         </div>
                                         <div class="block-date block-4-date">
                                             21 JULY 2020 </div>
